# ASErtain

./: .gitignore  DESIGN.md  PSEUDOCODE.md  README.md  example_config.yaml  pyproject.toml
examples/: ase_simulate.py  benchmark_approaches.py  benchmark_strata.py  pkunthii_anthocyanin_ase.yaml  run_pkunthii_ase.sh
examples/worked_example/: example.informative_snps.tsv
src/asertain/: __init__.py  __main__.py  annotation.py  bias.py  cli.py  config.py  contrast.py  counting.py  expression.py  external.py  genotypes.py  haplotype.py  labels.py  pipeline.py  report.py  stats.py  tables.py  testing.py  vcf.py
tests/: test_new_features.py
